--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,6 @@ dependencies {
     }
     compile 'com.google.android.gms:play-services-auth:11.6.2'
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.google.android.gms:play-services-location:11.6.2'
 }
